2012-10-09  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/FiltersToolbox/bwrmsmallcomp.m: (v0.1.0)

	- BWRMSMALLCOMP Remove small connected components from a
	segmentation.

2012-10-07  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/ItkImFilter.cpp: (v1.1.0)
	* matlab/ItkToolbox/itk_imfilter.m: (v0.6.0)
	* matlab/test/test_itk_imfilter.m: (v0.3.0)

	- Add Markov Random Field filter. This has been a challenging
	filter, because it can take as an input an array of weights, which
	have to be passed to the ITK filter as a vector (linearised
	array), and another vector with the size of the array. This
	prompted significant changes in MatlabImport and the creation of
	VectorWrapper to present a common interface for different
	vector-like classes.

	- Remove references to processing 5D images, some of the filters
	break if we try to instantiate them with that dimension.

	* matlab/FiltersToolbox/gmthr_seg.m: (v0.5.0)

	- Add new output argument obj, with the result of the Gaussian
	mixture model.

	- Fix bug. Had the wrong maximum number of output arguments.

	* matlab/VectorWrapper.h: (v0.3.0)
	* matlab/VectorWrapper.hxx: (v0.2.0)

	- Add functions ItkSizeCommonReadSize() and
	ItkSizeCommonReadHalfSize().

	* matlab/MatlabImportFilter.h: (v0.5.0)
	* matlab/MatlabImportFilter.hxx: (v0.5.0)

	- Add functions GetArraySize() and GetArrayHalfSize(). They
	simplify having to run mxGetNumberOfDimensions() and
	mxGetDimensions(), and then casting the result into e.g. itk::Size
	to pass it to ITK.

	- Add function GetArrayArgumentAsVector(). This is the equivalent
	to the linearising operator A(:) in Matlab.

	* matlab/VectorWrapper.h: (v0.2.1)
	* Add matlab/VectorWrapper.hxx: (v0.1.0)

	- Separate declaration from definition of the functions and
	methods, to make the code more readable.

	* matlab/GerardusCommon.h: (v0.9.0)

	- Add printSeq(), function to print the content of any sequence
	that supports input iterators, e.g. std::vector.
